[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = [
    "client",
    "runtime",
    "http1",
    "http2",
    "server",
    "stream",
] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
bytes = "1.3.0"
futures-util = "0.3.31"
tokio-stream = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
url = "2.2"
urlencoding = "2.1.0"
m3u8-rs = "5.0"
regex = "1.5"
async-trait = "0.1"
md5 = "0.7"
reqwest = "0.11"


