[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = [
    "client",
    "runtime",
    "http1",
    "http2",
    "server",
    "stream",
] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
bytes = "1.5"
futures = { version = "0.3", features = ["std"] }
tokio-stream = { version = "0.1" }
url = "2.2"
urlencoding = "2.1.0"
m3u8-rs = "5.0"
regex = "1.5"
async-trait = "0.1"
reqwest = "0.11"
async-stream = "0.3"
flate2 = "1.0"
crc32fast = "1.3"
pin-project-lite = "0.2"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }


