[package]
name = "proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
urlencoding = "2.1.0"
m3u8-rs = "5.0"
regex = "1.5"
async-trait = "0.1"
reqwest = "0.11"
async-stream = "0.3"
md5 = "0.7"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
hyper = { version = "0.14", features = ["full"] }



